--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -16,6 +16,15 @@
     <p>This is my blog. I have written {% total_posts %} posts so far :-)</p>
     <h3>Latest posts</h3>
     {% show_latest_posts 5 %}
+    <h3> Most Commented Posts</h3>
+    {% get_most_commented_posts as most_commented_posts %}
+    <ul>
+      {% for post in most_commented_posts %}
+        <li>
+          <a href="{{ post.get_absoulte_url }}"> {{ post.title }}</a>
+        </li>
+      {% endfor %}
+    </ul>
   </div>
 </body>
 </html>
